--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -82,7 +82,7 @@ jobs:
   coverage:
     name: Check coverage
     runs-on: ubuntu-latest
-    needs: pytest
+    needs: pytest-linux
 
     steps:
       - name: Fetch coverage
