--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          winget install BurntSushi.ripgrep.MSVC
+          winget install --accept-source-agreements BurntSushi.ripgrep.MSVC
 
       - name: Execute pytest
         run: |
