Check ripgrep install.

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -79,6 +79,10 @@ jobs:
         run: |
           winget install --accept-source-agreements BurntSushi.ripgrep.MSVC
 
+      - name: Check Ripgrep
+        run: |
+          rg --version
+
       - name: Execute pytest
         run: |
           pytest
