Manual reload i guess?

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -77,7 +77,8 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          winget install --location . --accept-source-agreements BurntSushi.ripgrep.MSVC
+          winget install --accept-source-agreements BurntSushi.ripgrep.MSVC && \
+          $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
 
       - name: Check Ripgrep
         run: |
