--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -77,8 +77,8 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          winget install --accept-source-agreements BurntSushi.ripgrep.MSVC
-          $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
+          winget upgrade winget
+          winget install --accept-source-agreements -e --disable-interactivity BurntSushi.ripgrep.MSVC 
 
       - name: Check Ripgrep
         run: |
