--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -77,8 +77,8 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          winget upgrade winget
-          winget install --accept-source-agreements -e --disable-interactivity BurntSushi.ripgrep.MSVC 
+          winget upgrade --accept-source-agreements --disable-interactivity winget
+          winget install --accept-source-agreements --disable-interactivity -e BurntSushi.ripgrep.MSVC 
 
       - name: Check Ripgrep
         run: |
