--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          $ choco install ripgrep
+          choco install ripgrep
 
       - name: Check Ripgrep
         run: |
