Revert "Try centralizing thw workspace setup."
This reverts commit 58ebbc16e69eec376445897496ede0de62608b65.

--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -9,10 +9,19 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
-      - name: Setup Workspace
-        uses: ./.github/actions/setup-workspace
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          dependency-group: pytest
+          python-version: '3.12'
+          cache: pip
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade uv
+          uv pip install --system .[pytest]
 
       - name: Install system dependencies
         run: |
@@ -48,10 +57,19 @@ jobs:
     runs-on: windows-2025
 
     steps:
-      - name: Setup Workspace
-        uses: ./.github/actions/setup-workspace
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          dependency-group: pytest
+          python-version: '3.12'
+          cache: pip
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade uv
+          uv pip install --system .[pytest]
 
       - name: Install system dependencies
         run: |
@@ -66,10 +84,19 @@ jobs:
     runs-on: macos-15
 
     steps:
-      - name: Setup Workspace
-        uses: ./.github/actions/setup-workspace
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          dependency-group: pytest
+          python-version: '3.12'
+          cache: pip
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade uv
+          uv pip install --system .[pytest]
 
       - name: Install system dependencies
         run: |
